2009-04-08  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in, NEWS:
	=== Version 0.4.0 ===

2009-04-08  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterrtf.h (FilterRTF::chgCharState, FilterRTF::isThaiChar):
	Declare utility functions as static members.

2009-04-08  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.cpp (WinMacNormal, MacOffsetLeft, MacOffsetLeftHigh,
	MacOffsetNormal, WinOffsetLeft, WinOffsetLeftHigh, WinOffsetNormal):
	Declare internal data as file-scoped.

	* src/filterlatex.h
	(FilterLatex::isLongTailChar, FilterLatex::idxVowelToneMark):
	Declare utility functions as static members.

	* src/filterlatex.cpp (FilterLatex::isLongTailChar):
	Eliminate unnecessary true/false conditional expression; simple boolean
	expression is enough.

	* src/filterlatex.cpp (FilterLatex::idxVowelToneMark):
	Check array index range before accessing, rather than after.

2009-04-08  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/maxwordseg.cpp (MaxWordSeg::CreateSentence):
	Check array index range before accessing, rather than after.

2009-04-07  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/longwordseg.cpp (LongWordSeg::LongWordSeg):
	Use 'delete[]' instead of 'delete', to match with 'new []', fixing
	valgrind warning.

	* src/longwordseg.cpp (LongWordSeg::CreateSentence):
	Check array index range before accessing, rather than after, fixing
	valgrind warnings of conditional jumps depending on uninitialized
	values.

2009-04-07  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/maxwordseg.cpp
	(MaxWordSeg::CreateSentence, MaxWordSeg::WordSegArea):
	Check range of array index for IdxSep[] *before* accessing the array
	element, rather than *after*, fixing valgrind warnings of conditional
	jumps depending on uninitialized values.

2009-04-07  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList):
	* src/filterhtml.cpp (FilterHtml::FilterHtml):