@@ -2,7 +2,7 @@ dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(src/wordseg.cpp)
 dnl Every other copy of the package version number gets its value from here
-AM_INIT_AUTOMAKE(swath, 0.4.0)
+AM_INIT_AUTOMAKE(swath, 0.4.0svn)
 
 AC_SUBST(VERSION)
 
