@@ -1,3 +1,10 @@
+2009-04-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* configure.in: Post-release version suffix added.
+	* src/wordseg.cpp (main, +Version): Add -V/--version to print version
+	info, as suggested by Beamer User.
+	* src/Makefile.am: Pass -DVERSION CFLAGS.
+
 2009-04-08  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* configure.in, NEWS:
